Added few more test for filter and services
Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>